Add auth check plugin
